--- a/history/foreign/axial.html
+++ b/history/foreign/axial.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-11 Thu 03:12 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Early Iron Age Indian influences on the Middle-East ⭐</title>
@@ -314,6 +314,10 @@ Now this Ganges it seems, was ten cubits high, and in personal beauty excelled a
 
 <p>
 The story itself is very magical of course, and the Greeks wrongly thought that the Ganga river connected to the Nile River <sup><a id="fnr.x" class="footref" href="#fn.x" role="doc-backlink">10</a></sup>, but the concept of Indians settled in faraway regions coming to rule those lands is not unheard of, as we will see. Other writers have noted other cultural coincidences between India and Ethiopia in this period (such as the unique use of an abugida), lending credence to the tale <sup><a id="fnr.xi" class="footref" href="#fn.xi" role="doc-backlink">11</a></sup>.
+</p>
+
+<p>
+Here is a comprehensive paper on the topic of possible Indian influences on the Kushite kingdom: <a href="https://link.springer.com/article/10.1007/s10437-014-9169-0">The Meroitic Empire: Trade and Cultural Influences in an Indian Ocean Context</a>.
 </p>
 
 <p>
@@ -908,7 +912,7 @@ You also have the Nuristani people, who inhabit the same region &#x2013; they we
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-11 Thu 03:12</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
