--- a/other-people/health.html
+++ b/other-people/health.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-27 Wed 20:55 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Health and genetics</title>
@@ -207,8 +207,9 @@
 <ul>
 <li><a href="#orgf86a852">1. AASI height</a></li>
 <li><a href="#org6e1538e">2. fat/muscle gain among Indians</a></li>
-<li><a href="#orgf907911">3. agriculture-induced genetic changes</a></li>
-<li><a href="#org9e4092f">4. white rice intolerance</a></li>
+<li><a href="#org591cf11">3. on the retarded &ldquo;British famines caused Indians to become skinny-fat&rdquo; meme</a></li>
+<li><a href="#orgf907911">4. agriculture-induced genetic changes</a></li>
+<li><a href="#org9e4092f">5. white rice intolerance</a></li>
 </ul>
 </div>
 </div>
@@ -333,9 +334,77 @@ But you will find such random genetic differences in every population, only Indi
 </p>
 </div>
 </div>
-<div id="outline-container-orgf907911" class="outline-2">
-<h2 id="orgf907911"><span class="section-number-2">3.</span> agriculture-induced genetic changes</h2>
+<div id="outline-container-org591cf11" class="outline-2">
+<h2 id="org591cf11"><span class="section-number-2">3.</span> on the retarded &ldquo;British famines caused Indians to become skinny-fat&rdquo; meme</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1944513221123256581">Twitter</a></p>
+</p>
+
+<p>
+Apart from the pseudoscientific drivel, the famines were in Madras and Bengal.
+</p>
+
+<p>
+The people with the worst Diabetes prevalence are Pakistani Punjabis who were spoonfed and coddled the most by the British Raj and now seethe at them all day.
+</p>
+
+<p>
+<img src="/img/charts/muslim_diabetes_3.jpeg" alt="muslim_diabetes_3.jpeg" />
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1966943489762988130">Twitter</a></p>
+</p>
+
+<p>
+The other thing is that while &ldquo;skinny-fat&rdquo; is not something that has been measured and studied systematically AFAIK, you can look at correlates for it like diabetes (obesity and cardiovascular diseases are harder proxies when you&rsquo;re dealing with countries with significant malnutrition rates).
+</p>
+
+<p>
+The main predictive factors for diabetes in the subcontinent are: 1) being Muslim and 2) having a white rice based diet.
+</p>
+
+<p>
+<img src="/img/charts/muslim_diabetes.png" alt="muslim_diabetes.png" />
+</p>
+
+<p>
+<img src="/img/charts/muslim_diabetes_2.png" alt="muslim_diabetes_2.png" />
+</p>
+
+<p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/1611829/#:~:text=Gujerati%20Moslems%20had%20the%20highest,(74%2D171)%3B%20females%3A">https://pubmed.ncbi.nlm.nih.gov/1611829/#:~:text=Gujerati%20Moslems%20had%20the%20highest,(74%2D171)%3B%20females%3A</a>
+</p>
+
+<p>
+<a href="https://academic.oup.com/eurpub/article/28/suppl_1/cky047.042/4973086?login=false">https://academic.oup.com/eurpub/article/28/suppl_1/cky047.042/4973086?login=false</a>
+</p>
+
+<p>
+So &ldquo;British famines&rdquo; doesn&rsquo;t show up anywhere. For instance while Madras and Bengal suffered from famines, Pakistan was one region you can confidently say massively benefited from British rule. Yet it has the worst rates of diabetes.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1944914255331123416">Twitter</a></p>
+</p>
+
+<p>
+Choose your diabetes:
+</p>
+
+<p>
+<img src="/img/charts/rice.png" alt="rice.png" />
+</p>
+
+<p>
+<img src="/img/charts/sugar.png" alt="sugar.png" />
+</p>
+</div>
+</div>
+<div id="outline-container-orgf907911" class="outline-2">
+<h2 id="orgf907911"><span class="section-number-2">4.</span> agriculture-induced genetic changes</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 <p class="byline">Published on <a href="https://x.com/jonatanpallesen/status/1835340279307469170">Twitter</a> by <a href="https://x.com/jonatanpallesen">@jonatanpallesen</a></p>
 New paper from David Reich lab:
@@ -359,8 +428,8 @@ Among these, positive selection for intelligence and education. Negative selecti
 </div>
 </div>
 <div id="outline-container-org9e4092f" class="outline-2">
-<h2 id="org9e4092f"><span class="section-number-2">4.</span> white rice intolerance</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org9e4092f"><span class="section-number-2">5.</span> white rice intolerance</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 East Asians quite literally have evolutionary adaptations to eat white rice.
 </p>
@@ -377,7 +446,7 @@ Landini et al (2020), <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7896717/
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-27 Wed 20:55</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
