--- a/politics/agency/wiki.html
+++ b/politics/agency/wiki.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-06 Sat 15:06 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Wiki</title>
@@ -201,6 +201,17 @@
 </div>
 <div id="content" class="content">
 <h1 class="title">Wiki</h1>
+<div id="table-of-contents" role="doc-toc">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents" role="doc-toc">
+<ul>
+<li><a href="#orgff7791c">1. Worldbuilding</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgff7791c" class="outline-2">
+<h2 id="orgff7791c"><span class="section-number-2">1.</span> Worldbuilding</h2>
+<div class="outline-text-2" id="text-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1962035363758919799">Twitter</a></p>
 </p>
@@ -228,10 +239,16 @@ Like a detailed illustrated wiki including
 <li>&ldquo;themes&rdquo; that people would talk about and think in terms of, also themes from the modern memespace they <b>wouldn&rsquo;t</b> have talked about.</li>
 <li>examples of plots, magic tricks and superstitions as described by Kautilya</li>
 </ul>
+
+<p>
+The work is impressive, but Indians shouldn&rsquo;t be satisfied with re-tellings of the same 2 ancient wars and 2 medieval kingdoms. There must be a film set in the time of Janaka of Mithila, during the great debates, when the first cities were established and far-venturing ascetics settled wild lands in south india and afghanistan. A &ldquo;pirates of Suvarṇabhūmī&rdquo; type series (but no retarded twist, the pirates are the bad guys and the Indian explorers are the good guys) about early adventures in Suvarṇabhūmī. Or about the tale of Sanudāsa the prodigal son who took to the seas to repay his family&rsquo;s debts; plenty of room for artistic creativity to talk about his adventures in Africa/Socotra/Mediterranean/Central Asia. A love story in the time of the Ārya-Nāga enemity, culminating in Janamejaya ending the sarpasatra sacrifice. An intrigue set in late Mauryan times, when the Buddhist Deep State was conspiring with the Greco-Bactrian Buddhists, culminating in Puṣyamitra Śuṅga ending the Mauryan dynasty and putting the traitors to the sword, with the help of Khāravela who had long yearned for revenge for his people (Kaliṅga and Jains). That Buddhist story about the curious young boy who ventured to Rome in order to obtain their superior robot-making technology for India. A Battle of the Ten Kings adaptation but with actual proper intrigue and strategy not just brief boom-bam-victory this is our history kids. And of course, a story on Kautilya whose complexity does justice to the strategic genius he is known for.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-06 Sat 15:06</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
