--- a/politics/bjp.html
+++ b/politics/bjp.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>BJP vs Congress, and Modi Govt Achivements</title>
@@ -208,6 +208,8 @@
 <li><a href="#org6d4fb5a">1. scale</a></li>
 <li><a href="#orgbde5376">2. scale 2</a></li>
 <li><a href="#org39055e4">3. idealism cynicism</a></li>
+<li><a href="#org51b8391">4. Everything the British did cynically, Congress did ideologically</a></li>
+<li><a href="#orge45cb13">5. Lib/Congressi foreign policy nowadays</a></li>
 </ul>
 </div>
 </div>
@@ -334,10 +336,94 @@ May the idealists win, and may the cynics perish.
 </p>
 </div>
 </div>
+<div id="outline-container-org51b8391" class="outline-2">
+<h2 id="org51b8391"><span class="section-number-2">4.</span> Everything the British did cynically, Congress did ideologically</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1971410397644439786">Twitter</a></p>
+I&rsquo;ve been increasingly realizing that &ldquo;everything the British did cynically, the Nehruvians did ideologically&rdquo;.
+</p>
+
+<p>
+The British were favorable to Muslims (building out West Punjab with canals, preferentially hiring Muslims after the 1857 Rebellion, etc.) because they were seen as less rebellious, and because larger Muslim influence prevented a unified Hindu block of resistance. Congress did the same thing out of secular ideology.
+</p>
+
+<p>
+The British stifled Indian industry because it threatened their rule; Congress stifled it out of socialist ideology.
+</p>
+
+<p>
+The British stoked up caste divisions as a form of divide-and-rule, especially supported anti-Brahmin movements, explicitly stating that it was necessary to destroy the status of traditional elites in order to establish their rule. Congress does it out of left-wing belief in ahistorical oppression narratives.
+</p>
+
+<p>
+The British ran a White Elephant economy: building up a few good areas and letting the rest of the country languish in poverty, because that&rsquo;s all they needed for the few Brits stationed in India. Congress did the same: boasting about building four universities and two good trains over 70 years and scoffing at the massive scale at which Modi rolls out trains and roads and ports and airports and toilets and electricity.
+</p>
+
+<p>
+The British fired on civilians at Jallianwala Bagh to shut down threats to their rule. Congress allowed terrorists and rioters to fire at Indians, out of pusillanimity and secularism—and they themselves (in 1948 and 1984) and their allies (Ayodhya 1990, Marichjhapi 1979) did so out of anti-Hindu ideology.
+</p>
+
+<p>
+And then finally we have the general pusillanimity of Congress rule: whether in defending against terror attacks or in refusing various territories or even a UN seat &#x2026; on that, even the British have no analog.
+</p>
+</div>
+</div>
+<div id="outline-container-orge45cb13" class="outline-2">
+<h2 id="orge45cb13"><span class="section-number-2">5.</span> Lib/Congressi foreign policy nowadays</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1977419310067765412">Twitter</a></p>
+</p>
+
+<p>
+2021: Taliban victory looks favourable to Pak, looks grim for India
+→ Left-libs: &ldquo;triumph of anti-imperialism! I ❤️ Taliban&rdquo;
+</p>
+
+<p>
+2025: Taliban fighting Pak, looks favourable to India
+→ Left-libs/Congress: &ldquo;How dare Govt invite Taliban😡 what about WOMEN JOURNALISTS???&rdquo;
+</p>
+
+<p>
+2017: Trump stops aid to Pakistan, has favourable relationship with India
+→ Left-libs/Congress: &ldquo;Fcuk Trump!!! fascist. 🤬🤬 How dare Modi be so friendly with him?&rdquo;
+</p>
+
+<p>
+2025: Trump tries to meddle in our affairs, puts tariffs, romances Asim Munir
+→ Left-libs/Congress: &ldquo;Trump is right about everything! Indian economy is dead. Trump said Pak shot down our planes ✈️✈️✈️ will Modi answer for it?&rdquo;
+</p>
+
+<p>
+Pakistan: murders our civilians and openly rewards those who do, despite being a tenth of our power.
+→ Left-libs/Congress: &ldquo;make peace with them!&rdquo; &lt;parrots literal Pakistani propaganda in parliament&gt;
+</p>
+
+<p>
+China: economic and military behemoth
+→ Left-libs/Congress: &ldquo;Shouldn&rsquo;t we attack CHINA? We should make peace with Pakistan so we can both attack CHINA!!!&rdquo;
+</p>
+
+<p>
+Israel: supplies technology for high-tech weapons and drones, manufactured here in India on license.
+→ Left-libs/Congress: &ldquo;Boycott Israel! We should support Hamas terrorists who rape and murder thousands of civilians instead! That is the MORAL HIGH-GROUND&rdquo; &lt;also tries to sanction Adani, who is the guy manufacturing it locally on license&gt;
+</p>
+
+<p>
+These people are beyond serious criticism or even parody at this point. Their only value is as human compost.
+</p>
+
+<p>
+As @Akshay<sub>VAK</sub> said, the literal only consistent thread behind Left/Congress&rsquo;s agenda is to work against Indian interests always and everywhere.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
