--- a/politics/leli-raj/aether.html
+++ b/politics/leli-raj/aether.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-18 Thu 16:32 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Leftist Ideological Aether and Lay Leftists ⭐</title>
@@ -208,6 +208,7 @@
 <li><a href="#org9e533b4">1. ideological vs pragmatic objections</a></li>
 <li><a href="#org1b1cb69">2. Real socialism</a></li>
 <li><a href="#org7294b4d">3. Hate vs mockery</a></li>
+<li><a href="#orgf00e486">4. Propaganda so subtle even the ones doing it don&rsquo;t realize.</a></li>
 </ul>
 </div>
 </div>
@@ -314,10 +315,24 @@ The leftist HATES the sangh pracharak and sees them as enemy, the RW MOCKS the g
 </p>
 </div>
 </div>
+<div id="outline-container-orgf00e486" class="outline-2">
+<h2 id="orgf00e486"><span class="section-number-2">4.</span> Propaganda so subtle even the ones doing it don&rsquo;t realize.</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1975764839109960123">Twitter</a></p>
+IMO this kind of thing is not even deliberate insertion of leftist narrative, but the Leftist Ideological Aether.
+</p>
+
+<p>
+Tropes like &ldquo;tribals vs evil landlords&rdquo; come naturally to people, not even thinking of it as leftist. Propaganda so subtle even the ones doing it don&rsquo;t realize.
+Quote
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-18 Thu 16:32</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
