--- a/politics/leli-raj/distractions.html
+++ b/politics/leli-raj/distractions.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Don't get distracted by identities, "deep state" or "globalism": attack Left-liberal ideology directly ⭐</title>
@@ -209,6 +209,7 @@
 <ul>
 <li><a href="#org160cbbe">1.1. Old tribes, new tribes</a></li>
 <li><a href="#org4a10e22">1.2. Cozy corner</a></li>
+<li><a href="#orgb004574">1.3. Danger of racism</a></li>
 </ul>
 </li>
 <li><a href="#org7b99999">2. Never attribute to identity or big-brain sociological theorizing what can be attributed to ideology</a></li>
@@ -263,6 +264,30 @@ The &ldquo;why are TBs woke?&rdquo; pathologizing is the same as MAGAs asking &l
 
 <p>
 <i>Everything</i> is woke&#x2013;the culture, all the institutions, elite religion accept left-liberalism. You just didn&rsquo;t notice until it touched your cozy corner of the world.
+</p>
+</div>
+</div>
+<div id="outline-container-orgb004574" class="outline-3">
+<h3 id="orgb004574"><span class="section-number-3">1.3.</span> Danger of racism</h3>
+<div class="outline-text-3" id="text-1-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1976684245277147352">Twitter</a></p>
+</p>
+
+<p>
+&ldquo;Fortunately, there&rsquo;s a philosophy called liberalism, which says you needn&rsquo;t live like this.&rdquo;
+</p>
+
+<p>
+This is the risk of RWs pouring their energy into racism. Left-liberalism eventually comes to them like Jesus saving the prostitutes, appearing to have a monopoly on humanism and peace.
+</p>
+
+<p>
+I was pro-racism when everyone seemed to be doing it out of genuine enjoyment. &ldquo;The racist community is the most inclusive&rdquo; era. It was a sport, an art, a homosocial bonding experience.
+</p>
+
+<p>
+But you all (of every race) have proven yourselves incontinent unsportsmanlike dehātī aurats.
 </p>
 </div>
 </div>
@@ -456,7 +481,7 @@ We should distinguish
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
