--- a/politics/leli-raj/world_model.html
+++ b/politics/leli-raj/world_model.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-18 Thu 16:32 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>World models are the bottleneck for the Indian RW</title>
@@ -208,8 +208,10 @@
 <li><a href="#orgd3382dc">1. World models are important</a></li>
 <li><a href="#orgd20cd14">2. World models are the bottleneck</a></li>
 <li><a href="#orgc921171">3. Outdated world models are the bottleneck</a></li>
-<li><a href="#org95f9464">4. Bad world models and pompous about it</a></li>
-<li><a href="#orgaf6acdf">5. And the Americorps, where are they now?</a></li>
+<li><a href="#org66fd00a">4. Anti-fragility</a></li>
+<li><a href="#org95f9464">5. Bad world models and pompous about it</a></li>
+<li><a href="#orgaf6acdf">6. And the Americorps, where are they now?</a></li>
+<li><a href="#org76634e9">7. Crusades</a></li>
 </ul>
 </div>
 </div>
@@ -265,7 +267,7 @@ Playing with this kind of world model is like playing TrapAdventure2.
 </p>
 
 
-<div id="org4fedd56" class="figure">
+<div id="org3f7135d" class="figure">
 <p><img src="https://media.tenor.com/QFifHQQEfU4AAAAN/kirbys-adventure-kirby.png" alt="kirbys-adventure-kirby.png" />
 </p>
 </div>
@@ -362,11 +364,45 @@ Saar we are nobody&rsquo;s, those who can, don&rsquo;t really care or are just b
 <p>
 We&rsquo;re elite human capital
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1969411811670728988">Twitter</a></p>
+In general they are very smart when it comes to familiar/old problems, but stumble on things that are out-of-syllabus.
+</p>
+
+<p>
+E.g. they crushed Naxals with Śuṅgan ruthlessness, but were oblivious to what &ldquo;humanities in IITs&rdquo; would lead to.
+</p>
+</div>
+</div>
+<div id="outline-container-org66fd00a" class="outline-2">
+<h2 id="org66fd00a"><span class="section-number-2">4.</span> Anti-fragility</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1971422979742629965">Twitter</a></p>
+On &ldquo;anti-fragility&rdquo;&#x2013;
+</p>
+
+<p>
+Systems are anti-fragile to threats they understand, and fragile to those which don&rsquo;t.
+</p>
+
+<p>
+Your finger is fragile to a hot object, but Maxwell&rsquo;s demon is anti-fragile to it, because it knows the exact positions and momenta of every particle therein and can use it to generate work.
+</p>
+
+<p>
+India was fragile to EIC because it was an alien enemy. Today such an entity would pose no threat, because the basic concept of &ldquo;Indians should unite against foreign threats&rdquo; has been drilled into our minds. But it is fragile to the Left-liberal Rāj, because it doesn&rsquo;t understand it.
+</p>
+
+<p>
+India is anti-fragile to Pakistan. Middling when it comes to Islam in general; though it was once an understood threat, that understanding has slowly been eroded by decades of Nehruvian secularism.
+</p>
 </div>
 </div>
 <div id="outline-container-org95f9464" class="outline-2">
-<h2 id="org95f9464"><span class="section-number-2">4.</span> Bad world models and pompous about it</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org95f9464"><span class="section-number-2">5.</span> Bad world models and pompous about it</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1953664336469405740">Twitter</a></p>
 </p>
@@ -381,8 +417,8 @@ History doesn&rsquo;t repeat itself, it only rhymes.
 </div>
 </div>
 <div id="outline-container-orgaf6acdf" class="outline-2">
-<h2 id="orgaf6acdf"><span class="section-number-2">5.</span> And the Americorps, where are they now?</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="orgaf6acdf"><span class="section-number-2">6.</span> And the Americorps, where are they now?</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965135905611710917">Twitter</a></p>
 The tariffs should put an end to the &ldquo;Americorps control everything&rdquo; meme.
@@ -393,10 +429,26 @@ The only players in this game are ideologies. MAGA does stupid things, LeLis let
 </p>
 </div>
 </div>
+<div id="outline-container-org76634e9" class="outline-2">
+<h2 id="org76634e9"><span class="section-number-2">7.</span> Crusades</h2>
+<div class="outline-text-2" id="text-7">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1969970156349853756">Twitter</a></p>
+</p>
+
+<p>
+Muslims have almost the entire world—and soon almost the entire Western World, fighting a Crusade &#x2026; for them.
+</p>
+
+<p>
+For Indian RWs with outdated world models about &ldquo;colonial states&rdquo; and &ldquo;xtian missionaries&rdquo;, this should make you reconsider everything you know in the world.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-18 Thu 16:32</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
