--- a/politics/political-theory/meme-theory.html
+++ b/politics/political-theory/meme-theory.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-18 Thu 16:32 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Highly Advanced Semi-formal Meme Theory for beginners ⭐</title>
@@ -244,8 +244,9 @@
 <li><a href="#org45f1caa">25. Diffusion of blame</a></li>
 <li><a href="#orgd8fb65a">26. Arbitrage</a></li>
 <li><a href="#orgbc040c4">27. five types of good poasters</a></li>
-<li><a href="#org167df95">28. eight ways to engage with enemies</a></li>
-<li><a href="#org81ea6a8">29. Wwnhmbkpd</a></li>
+<li><a href="#org7938d9c">28. five ways to respect diversity</a></li>
+<li><a href="#org167df95">29. eight ways to engage with enemies</a></li>
+<li><a href="#org81ea6a8">30. Wwnhmbkpd</a></li>
 </ul>
 </div>
 </div>
@@ -337,6 +338,34 @@ Type-II bhōsaḍpilling: seething at The Man in the Arena for doing too much; r
 
 <p>
 Lack of dhṛti.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1976133266664194422">Twitter</a></p>
+</p>
+
+<p>
+Type-III bhōsaḍpilling: seething at TMitA or just any Chill Man for not being an incontinent dehātī coalposter like oneself (phoren-goggles-unkils)
+</p>
+
+<p>
+Type-IIb bhōsaḍpilling: low-T seethe at one&rsquo;s own countrymen for doing things because it &ldquo;increases hate toward us&rdquo;
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1971576233948541326">Twitter</a></p>
+</p>
+
+<p>
+The people seething at Vivek have the mindset of a dehati uncle-auntie who bitch about their <code>rich relatives who live in phoren</code> all day then asks said rich relatives to get sunglasses for them from phoren when they come back.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1971911773055078589">Twitter</a></p>
+</p>
+
+<p>
+The motto of monkeys here is &ldquo;When they came for [other monkey group], I masturbated till my upaliṅgam bled because of my long-standing lafḍā with other monkey group. And if you don&rsquo;t masturbate with me, you are a CUCK and SUBMISSIVE and a SEPOY for the other monkey group.&rdquo;
 </p>
 </div>
 </div>
@@ -1019,9 +1048,31 @@ autismmaxxers
 </p>
 </div>
 </div>
-<div id="outline-container-org167df95" class="outline-2">
-<h2 id="org167df95"><span class="section-number-2">28.</span> eight ways to engage with enemies</h2>
+<div id="outline-container-org7938d9c" class="outline-2">
+<h2 id="org7938d9c"><span class="section-number-2">28.</span> five ways to respect diversity</h2>
 <div class="outline-text-2" id="text-28">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1970498087257805023">Twitter</a></p>
+</p>
+
+<p>
+Five approaches to diversity, inspired by
+@indiainpixels
+&rsquo;s tweet
+</p>
+
+<p>
+Ethnic cleansing: hero slays dragon
+Sanskṛtization: hero tames, uplifts and marries dragon
+Individualism: hero and dragon coexist
+Ethnonationalism: hero and dragon maintain cold distance
+Left-liberalism: dragon slays hero
+</p>
+</div>
+</div>
+<div id="outline-container-org167df95" class="outline-2">
+<h2 id="org167df95"><span class="section-number-2">29.</span> eight ways to engage with enemies</h2>
+<div class="outline-text-2" id="text-29">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1875025794449219831">Twitter</a></p>
 </p>
@@ -1054,8 +1105,8 @@ eight ways to engage with enemies on x dot com the everything app
 </div>
 </div>
 <div id="outline-container-org81ea6a8" class="outline-2">
-<h2 id="org81ea6a8"><span class="section-number-2">29.</span> Wwnhmbkpd</h2>
-<div class="outline-text-2" id="text-29">
+<h2 id="org81ea6a8"><span class="section-number-2">30.</span> Wwnhmbkpd</h2>
+<div class="outline-text-2" id="text-30">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1937409578242871573">Twitter</a></p>
 </p>
@@ -1068,7 +1119,7 @@ Before posting anything, people should always think &ldquo;What would NiṣādaH
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-18 Thu 16:32</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
