--- a/politics/rhetorical-advice/talk.html
+++ b/politics/rhetorical-advice/talk.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Talk! All publicity is good publicity</title>
@@ -214,7 +214,7 @@ Think: 2019-20 where RW was constantly on the offensive (even if on useless bart
 </p>
 
 <p>
-Govt is doing a lot of good things are happening, but in stealth—while RW-aligned media wastes their time in this nonsense.
+Govt is doing a lot; many good things are happening, but in stealth—while RW-aligned media wastes their time making BREAKING NEWS out of random gossip, giving people the feeling &ldquo;RW media doesn&rsquo;t care about any important issues; only Cong/left is bringing up the important issues&rdquo; (because Cong/left are the only ones spreading any narratives at all, albeit ones that are antithetical to Indian national interests).
 </p>
 
 <p>
@@ -257,10 +257,56 @@ Follow-up questions. What sort of narratives might be valuable to inject into no
 <li>Ws of govt</li>
 <li>TFR, nirṇaya-pilling (but this will require a mindset change at the very top as well)</li>
 </ul>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1977785058619515249">Twitter</a></p>
+</p>
+
+<p>
+Things are looking really bad politically.
+</p>
+
+<ul class="org-ul">
+<li>Every narrative being pushed in the discourse is a Cong/Left one</li>
+
+<li>normie-lib/instagram discourse is so far left to the point that the narrative is shit like &ldquo;even Taliban realized the govt is being sexist by not inviting women&rdquo; with almost nobody contesting</li>
+
+<li>BJP is the new Jesus, being pinned for the sins of Congress, Ambedkarites, 5 billion year Brahmanical patriarchy, femcels and somehow now the Taliban.</li>
+
+<li>our geniuses have no idea of the situation facing us, and are instead bhosaḍpilling against BJP because muh Anil Mishra based or whatever and saying retarded shit like &ldquo;do you prefer Hindutvadi Congress or Bhimta BJP?&rdquo;</li>
+
+<li>the actual BJP &ldquo;IT cell&rdquo; accounts are doing the exact opposite of microtargetting; coming HERE on twitter and big-braining TO ITS OWN BASE about how &ldquo;Congress is the real conservative party&rdquo; &ldquo;Congress lawyer disrespected Ambedkar&rdquo; and building resentment against itself. Meanwhile Congress/Left peddles its agenda to SCs/OBCs unimpeded.</li>
+
+<li>Aravind is busy doing stupid secular/Hamas-appeasing propaganda for some reason. The point of cultivating a Kautilyan astrologer-LARPer agent is to make him actually do useful things with the credibility earned from astrologer-LARPing.</li>
+</ul>
+
+<p>
+And all this while BJP has been delivering the most in terms of actual <b>policy</b> value: Economic reforms through state and stealth at breakneck speed, Operation Sindoor (or rather all the indigenization &amp; build-up over the past 10 years that it revealed), Bangladeshi deportations, slum nuking, infrastructure spree; and I&rsquo;m sure a lot more to come once Bengal is liberated.
+</p>
+
+<p>
+Yes I know BJP/RSS&rsquo;s ground-game is still top-notch. But ground-game is like &ldquo;studying for exams&rdquo;, whereas what matters long-term is creating coherent narratives and winning over Elite/Midwit Human Capital and the Institutions, even if they are not electorally significant.
+</p>
+
+<p>
+The bulk of the room for improvement lies among organic RWs/BJP supporters like us, who are doing the shoddiest job. But to suggest some things to the govt/BJP itself:
+</p>
+
+<ul class="org-ul">
+<li>purge leftists everywhere: Wire type outlets, humanities departments, whatever ooga-booga NGOs. These are the people protecting and running cover for every other enemy of the Indian nation; purging them from existence is the single-greatest achievement one can have in his lifetime. Their openly treasonous behaviour during Op Sindoor + USAID revelations provide the best opportunity for it.</li>
+
+<li>build a real, competent IT cell, focused on proper message discipline (figuring out—through internal debate and testing—what the right angle to take on a particular topic is, and pushing that out), microtargeting and using the most basic tricks to increase engagement that the opposition does.</li>
+
+<li>maybe start building up consensus to ban instagram. The image/video-first medium really lends itself to psy-ops by</li>
+</ul>
+
+<p>
+cc: @amitmalviya @PMOIndia @narendramodi @BJP4India @BJP4Bengal @AmitShah
+</p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
