--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-20 Sat 15:27 -->
+<!-- 2025-10-18 Sat 00:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -226,7 +226,7 @@
 <li><a href="history/hinduism/restraint.html">Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity ⭐</a></li>
 <li><a href="history/hinduism/tolerance.html">Is Hinduism tolerant? Is it Nihilistic? ⭐</a></li>
 <li><a href="history/hinduism/philosophy.html">The early development of Indian philosophy ⭐</a></li>
-<li><a href="history/hinduism/identities.html">Traditional names for India and Hinduism</a></li>
+<li><a href="history/hinduism/identities.html">Traditional names for India and Hinduism + Who is a Hindu?</a></li>
 </ul></li>
 <li>sources
 <ul class="org-ul">
@@ -267,6 +267,7 @@
 <li><a href="politics/leli-ideology/totalizing.html">Left-liberals view foreign policy through an ideological, not material lens</a></li>
 <li><a href="politics/leli-ideology/liberal_ideology.html">Modern liberalism as the ideology of dehātization ⭐</a></li>
 <li><a href="politics/leli-ideology/origin.html">Origin and self-conception of Left-liberalism</a></li>
+<li><a href="politics/leli-ideology/streetlight.html">Streetlight</a></li>
 </ul></li>
 <li>leli-raj
 <ul class="org-ul">
@@ -290,6 +291,7 @@
 <li><a href="politics/misc/indian_traits.html">Misc Indian traits</a></li>
 <li><a href="politics/misc/dalali.html">ON DALĀLĪ AND BAVĀLĪ IN HINDOOSTĀN (ON SIMPING AND CHIMPING IN HINDOOSTĀN).</a></li>
 <li><a href="politics/misc/sindoor.html">Operation Sindoor concluding thoughts</a></li>
+<li><a href="politics/misc/racewars.html">Racewars</a></li>
 <li><a href="politics/misc/gulf.html">Speculations on the future trajectory of the Gulf countries</a></li>
 <li><a href="politics/misc/tharoor.html">Tharoor theories</a></li>
 <li><a href="politics/misc/front_fortification.html">Warfare and Front Fortification</a></li>
@@ -331,7 +333,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-20 Sat 15:27</p>
+<p class="date">Created: 2025-10-18 Sat 00:25</p>
 </div>
 </body>
 </html>
