--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-20 Sat 15:27 -->
+<!-- 2025-10-18 Sat 00:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -205,16 +205,15 @@
 <h2 id="org84683c4"><span class="section-number-2">1.</span> xatra</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-Check out <a href="https://srajma.github.io/xatra">srajma.github.io/xatra</a> or some example maps such as <a href="https://srajma.github.io/xatra/examples/nations/INDOSPHERE.html">INDOSPHERE.html</a>
-or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SEA<sub>ROUTES.html</sub></a>.
+I made <a href="https://github.com/srajma/xatra">xatra</a>, the best map-making package in the world (<code>pip install xatra &amp;&amp; xatra-install-data</code>). Check out <a href="https://srajma.github.io/maps">srajma.github.io/maps</a> for example maps like <a href="https://srajma.github.io/maps/nations_indosphere">nations<sub>indosphere</sub></a> and <a href="https://srajma.github.io/maps/sea">sea</a>.
 </p>
 
 <p>
-<img src="/img/doc_img/xatra/indosphere_2.png" alt="indosphere_2.png" />
+<img src="/img/doc_img/xatra2/nations_indosphere.png" alt="nations_indosphere.png" />
 </p>
 
 <p>
-<img src="/img/doc_img/xatra/searoutes_2.png" alt="searoutes_2.png" />
+<img src="/img/doc_img/xatra2/sea.png" alt="sea.png" />
 </p>
 </div>
 </div>
@@ -247,7 +246,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="history/hinduism/restraint.html">Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity ⭐</a></li>
 <li><a href="history/hinduism/tolerance.html">Is Hinduism tolerant? Is it Nihilistic? ⭐</a></li>
 <li><a href="history/hinduism/philosophy.html">The early development of Indian philosophy ⭐</a></li>
-<li><a href="history/hinduism/identities.html">Traditional names for India and Hinduism</a></li>
+<li><a href="history/hinduism/identities.html">Traditional names for India and Hinduism + Who is a Hindu?</a></li>
 </ul></li>
 <li>sources
 <ul class="org-ul">
@@ -288,6 +287,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="politics/leli-ideology/totalizing.html">Left-liberals view foreign policy through an ideological, not material lens</a></li>
 <li><a href="politics/leli-ideology/liberal_ideology.html">Modern liberalism as the ideology of dehātization ⭐</a></li>
 <li><a href="politics/leli-ideology/origin.html">Origin and self-conception of Left-liberalism</a></li>
+<li><a href="politics/leli-ideology/streetlight.html">Streetlight</a></li>
 </ul></li>
 <li>leli-raj
 <ul class="org-ul">
@@ -311,6 +311,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="politics/misc/indian_traits.html">Misc Indian traits</a></li>
 <li><a href="politics/misc/dalali.html">ON DALĀLĪ AND BAVĀLĪ IN HINDOOSTĀN (ON SIMPING AND CHIMPING IN HINDOOSTĀN).</a></li>
 <li><a href="politics/misc/sindoor.html">Operation Sindoor concluding thoughts</a></li>
+<li><a href="politics/misc/racewars.html">Racewars</a></li>
 <li><a href="politics/misc/gulf.html">Speculations on the future trajectory of the Gulf countries</a></li>
 <li><a href="politics/misc/tharoor.html">Tharoor theories</a></li>
 <li><a href="politics/misc/front_fortification.html">Warfare and Front Fortification</a></li>
@@ -416,7 +417,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-20 Sat 15:27</p>
+<p class="date">Created: 2025-10-18 Sat 00:25</p>
 </div>
 </body>
 </html>
