--- a/politics/nirnaya-pill/firebombing.html
+++ b/politics/nirnaya-pill/firebombing.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-10-18 Sat 00:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>On Firebombing Walmarts ⭐</title>
@@ -237,10 +237,18 @@ The reason Pakistan/Hamas targets civilians, does terrorism is:
 <p>
 We can&rsquo;t cargo-cult this when our circumstances are exactly opposite.
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1969983242640994771">Twitter</a></p>
+</p>
+
+<p>
+Terror only works if the Cathedral supports your &ldquo;cause&rdquo;. Because then even if they condemn your attack, it will bring attention to your cause and since the cause is supported by the Cathedral the coverage will be +ve.
+</p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-10-18 Sat 00:20</p>
 </div>
 </body>
 </html>
